--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid" />
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a href="#reserveTableForm" class="btn btn-block btn-warning btn-sm" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -56,22 +59,26 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthappizza" />
                     <div class="media-body">
                         <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
-                        <!-- <p class="d-none d-sm-block"> -->
-                        <p class="hidden-xs-down">
+                        <p class="d-none d-sm-block">
+                        <!-- <p class="hidden-xs-down"> -->
                           A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
                 </div>
             </div>
         </div>
 
-
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet<span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet"/>
+                </div>
             </div>
         </div>
 
@@ -88,6 +95,64 @@
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row row-content align-items-center">
+            <div class="col-sm-2">
+            </div>
+            <div class="col col-sm-8">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form id="reserveTableForm">
+                            <div class="form-group row">
+                                <label for="numOfGuests" class="col-md-2 col-form-label">Number of Guests</label>
+                                <div class="col-md-10">
+                                  <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="radio" name="radioOptions" id="radio1" value="option1"/>
+                                      <label class="form-check-label" for="radio1">1</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="radio" name="radioOptions" id="radio2" value="option2" />
+                                      <label class="form-check-label" for="radio2">2</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="radio" name="radioOptions" id="radio3" value="option3"/>
+                                      <label class="form-check-label" for="radio3">3</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="radio" name="radioOptions" id="radio4" value="option4"/>
+                                      <label class="form-check-label" for="radio4">4</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="radio" name="radioOptions" id="radio5" value="option5"/>
+                                      <label class="form-check-label" for="radio5">5</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="radio" name="radioOptions" id="radio6" value="option6"/>
+                                      <label class="form-check-label" for="radio6">6</label>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="dateAndTime" class="col-md-2 col-form-label">Date and Time</label>
+                                <div class="col-md-5">
+                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date"/>
+                                </div>
+                                <div class="col-md-5">
+                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time"/>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col offset-0 offset-sm-2">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-2">
             </div>
         </div>
     </div>
