--- a/index.html
+++ b/index.html
@@ -76,6 +76,86 @@
         </div>
     </div>
 
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+
+                <div class="modal-body">
+                    <form id="reserveform">
+                        <div class="form-group row">
+                            <label for="numOfGuests" class="col-md-2 col-form-label">Number of Guests</label>
+                            <div class="col-md-10">
+                              <div class="form-check form-check-inline">
+                                  <input class="form-check-input" type="radio" name="radioOptions" id="radio1" value="option1"/>
+                                  <label class="form-check-label" for="radio1">1</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                  <input class="form-check-input" type="radio" name="radioOptions" id="radio2" value="option2" />
+                                  <label class="form-check-label" for="radio2">2</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                  <input class="form-check-input" type="radio" name="radioOptions" id="radio3" value="option3"/>
+                                  <label class="form-check-label" for="radio3">3</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                  <input class="form-check-input" type="radio" name="radioOptions" id="radio4" value="option4"/>
+                                  <label class="form-check-label" for="radio4">4</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                  <input class="form-check-input" type="radio" name="radioOptions" id="radio5" value="option5"/>
+                                  <label class="form-check-label" for="radio5">5</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                  <input class="form-check-input" type="radio" name="radioOptions" id="radio6" value="option6"/>
+                                  <label class="form-check-label" for="radio6">6</label>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="section" class="col-md-2 col-form-label">Section</label>
+                            <div class="col-md-10">
+                                <div class="form-check form-check-inline btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="form-check-label btn btn-success active" for="radiosection1">
+                                        <input class="form-check-input" type="radio" name="radioOptionsSection" id="radiosection1" value="nonSmoking" autocomplete="off" checked/>
+                                        Non-Smoking
+                                    </label>
+                                    <label class="form-check-label btn btn-danger" for="radiosection2">
+                                        <input class="form-check-input" type="radio" name="radioOptionsSection" id="radiosection2" value="smoking" autocomplete="off" >
+                                        Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="dateAndTime" class="col-md-2 col-form-label">Date and Time</label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" id="date" name="date" placeholder="Date"/>
+                            </div>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" id="time" name="time" placeholder="Time"/>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                        <!-- <div class="form-row"> -->
+                            <div class="col offset-0 offset-sm-2">
+                            <!-- <div class="col col-md-2"> -->
+                                <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -88,7 +168,10 @@
                 </div>
                 <div class="col-12 col-sm align-self-center">
                     <!-- <a href="#reserveTableForm" class="btn btn-block btn-warning btn-sm" role="button">Reserve Table</a> -->
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom" href="#reserveform">Reserve Table</a>
+                    <!-- <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom" href="#reserveform">Reserve Table</a> -->
+                    <a role="button" class="btn btn-block nav-link btn-warning" data-placement="bottom" data-toggle="modal" data-target="#reserveModal">
+                        Reserve Table
+                    </a>
                 </div>
             </div>
         </div>
@@ -184,64 +267,7 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content align-items-center">
-            <div class="col-sm-2">
-            </div>
-            <div class="col col-sm-8">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form id="reserveform">
-                            <div class="form-group row">
-                                <label for="numOfGuests" class="col-md-2 col-form-label">Number of Guests</label>
-                                <div class="col-md-10">
-                                  <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" name="radioOptions" id="radio1" value="option1"/>
-                                      <label class="form-check-label" for="radio1">1</label>
-                                  </div>
-                                  <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" name="radioOptions" id="radio2" value="option2" />
-                                      <label class="form-check-label" for="radio2">2</label>
-                                  </div>
-                                  <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" name="radioOptions" id="radio3" value="option3"/>
-                                      <label class="form-check-label" for="radio3">3</label>
-                                  </div>
-                                  <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" name="radioOptions" id="radio4" value="option4"/>
-                                      <label class="form-check-label" for="radio4">4</label>
-                                  </div>
-                                  <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" name="radioOptions" id="radio5" value="option5"/>
-                                      <label class="form-check-label" for="radio5">5</label>
-                                  </div>
-                                  <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" name="radioOptions" id="radio6" value="option6"/>
-                                      <label class="form-check-label" for="radio6">6</label>
-                                  </div>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="dateAndTime" class="col-md-2 col-form-label">Date and Time</label>
-                                <div class="col-md-5">
-                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date"/>
-                                </div>
-                                <div class="col-md-5">
-                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time"/>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="col offset-0 offset-sm-2">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-2">
-            </div>
-        </div>
+
     </div>
 
     <footer class="footer">
@@ -289,11 +315,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
+
 </body>
 
 </html>
