--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a id="loginModalShow">
+                    <a id="loginModalToggle">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
                 </span>
@@ -169,7 +169,7 @@
                     <!-- <a href="#reserveTableForm" class="btn btn-block btn-warning btn-sm" role="button">Reserve Table</a> -->
                     <!-- <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom" href="#reserveform">Reserve Table</a> -->
                     <!-- <a role="button" class="btn btn-block nav-link btn-warning" data-placement="bottom" data-toggle="modal" data-target="#reserveModal"> -->
-                    <a id="reserveModalShow" role="button" class="btn btn-block nav-link btn-warning">
+                    <a id="reserveModalToggle" role="button" class="btn btn-block nav-link btn-warning">
                         Reserve Table
                     </a>
                 </div>
@@ -318,33 +318,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('#mycarousel').carousel({ interval: 2000});
-            $('#carouselButton').click(function() {
-                if ($('#carouselButton').children('span').hasClass('fa-pause')){
-                    $('#mycarousel').carousel('pause');
-                    $('#carouselButton').children('span').removeClass('fa-pause');
-                    $('#carouselButton').children('span').addClass('fa-play');
-                }
-                else if ($('#carouselButton').children('span').hasClass('fa-play')){
-                    $('#mycarousel').carousel('cycle');
-                    $('#carouselButton').children('span').removeClass('fa-play');
-                    $('#carouselButton').children('span').addClass('fa-pause');
-                }
-            });
-
-            $('#reserveModalShow').click(function() {
-                $('#reserveModal').modal('show');
-            });
-
-            $('#loginModalShow').click(function() {
-                $('#loginModal').modal('show');
-            });
-          
-        });
-
-    </script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
